Actualizar títulos de proyectos en las páginas de teatro y ajustar descripciones en el carrusel

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -49,7 +49,7 @@ const { id, city, year, room, project, description1, description2, description3,
         <div class="place-items-start bg-primary-100 dark:bg-primary-950 lg:grid xl:grid-cols-3">
             <img
                 transition:name={id}
-                class="top-0 h-[50vh] w-full overflow-hidden object-cover object-bottom lg:rounded-3xl lg:p-4 xl:sticky xl:h-screen"
+                class="top-0 h-[50vh] w-full overflow-hidden object-cover object-bottom lg:rounded-3xl lg:p-4 xl:sticky xl:h-screen grayscale"
                 src={img.src}
                 alt="picture"
             />
@@ -68,7 +68,7 @@ const { id, city, year, room, project, description1, description2, description3,
                     </div>
                     <div class="flex items-center">
                         <dd
-                            class="text-4xl font-thin tracking-tight text-primary-950/70 dark:text-primary-200/70 lg:text-6xl">
+                            class="text-4xl font-thin tracking-tight text-primary-950/70 dark:text-primary-200/70 lg:text-5xl">
                             {year}
                         </dd>
                     </div>
