--- a/src/pages/projects/theaters/ciudad-de-las-artes.astro
+++ b/src/pages/projects/theaters/ciudad-de-las-artes.astro
@@ -66,8 +66,8 @@ const images = [
 ];
 ---
 
-<Base>
-    <Layout description="" title="">
+<Layout description="" title="Ciudad de las Artes y las Ciencias">
+    <Base>
         <ProjectPage
             images={images}
             id="ciudad"
@@ -81,5 +81,5 @@ const images = [
             datosTecnicos={datosTecnicos}
             asesores={asesores}
         />
-    </Layout>
-</Base>
+    </Base>
+</Layout>
