--- a/src/pages/projects/theaters/eastman-theater.astro
+++ b/src/pages/projects/theaters/eastman-theater.astro
@@ -81,8 +81,8 @@ const images = [
 ];
 ---
 
-<Base>
-    <Layout description="" title="">
+<Layout description="" title="Eastman Theater - Rochester">
+    <Base>
         <ProjectPage
             images={images}
             id="eastman"
@@ -96,5 +96,5 @@ const images = [
             datosTecnicos={datosTecnicos}
             asesores={asesores}
         />
-    </Layout>
-</Base>
+    </Base>
+</Layout>
