--- a/src/pages/projects/theaters/teatro-colon.astro
+++ b/src/pages/projects/theaters/teatro-colon.astro
@@ -76,8 +76,8 @@ const images = [
 ];
 ---
 
-<Base>
-    <Layout description="" title="">
+<Layout description="" title="Teatro Colón">
+    <Base>
         <ProjectPage
             images={images}
             id="colon"
@@ -92,5 +92,5 @@ const images = [
             datosTecnicos={datosTecnicos}
             asesores={asesores}
         />
-    </Layout>
-</Base>
+    </Base>
+</Layout>
