--- a/src/pages/projects/theaters/teatro-del-lago.astro
+++ b/src/pages/projects/theaters/teatro-del-lago.astro
@@ -172,8 +172,8 @@ const images = [
 ];
 ---
 
-<Base>
-    <Layout description="" title="">
+<Layout description="" title="Teatro del Lago">
+    <Base>
         <ProjectPage
             images={images}
             id="lago"
@@ -187,5 +187,5 @@ const images = [
             datosTecnicos={datosTecnicos}
             asesores={asesores}
         />
-    </Layout>
-</Base>
+    </Base>
+</Layout>
