--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -8,7 +8,7 @@ import Nav from './Nav.astro';
 <header
     id="top"
     x-data="{ open: false }"
-    class="transition pt-2 sm:pt-0"
+    class="pt-2 transition sm:pt-0"
     :class="{ 'bg-primary-500/10 dark:bg-primary-400/10 z-20': open, 'bg-transparent dark:bg-transparent': !(open) }">
     <div
         class="mx-auto flex max-w-2xl items-center justify-between px-4 py-0 sm:px-6 sm:py-1 lg:max-w-7xl lg:px-8 lg:py-2">
@@ -103,9 +103,9 @@ import Nav from './Nav.astro';
         x-show="open"
         x-collapse
         x-collapse.duration.500ms>
-        <div class="relative grid grid-cols-1 gap-16 pb-24 pt-6 lg:grid-cols-2 lg:pt-12">
+        <div class="relative grid grid-cols-1 gap-x-8 pb-24 pt-2 lg:grid-cols-2 lg:pt-4">
             <div
-                class="hidden h-full w-auto items-center justify-center rounded-3xl bg-primary-500/10 object-cover dark:bg-primary-400/10 lg:flex">
+                class="hidden w-auto items-center justify-center rounded-xl bg-primary-500/10 object-cover dark:bg-primary-400/10 lg:flex">
                 <img
                     src={orquesta.src}
                     alt="orquesta picture"
