--- a/src/pages/projects/theaters/kimmel-center.astro
+++ b/src/pages/projects/theaters/kimmel-center.astro
@@ -24,7 +24,7 @@ const datosTecnicos = [
     { web: 'https://www.kimmelcenter.org/', href: 'https://www.kimmelcenter.org/' },
 ];
 
-const asesores = ["-"];
+const asesores = ['-'];
 
 const images = [
     {
@@ -54,8 +54,8 @@ const images = [
 ];
 ---
 
-<Base>
-    <Layout description="" title="">
+<Layout description="" title="The Kimmel Center for the Performing Arts">
+    <Base>
         <ProjectPage
             images={images}
             id="kimmel"
@@ -69,5 +69,5 @@ const images = [
             datosTecnicos={datosTecnicos}
             asesores={asesores}
         />
-    </Layout>
-</Base>
+    </Base>
+</Layout>
