--- a/src/pages/projects/theaters/teatro-santiago.astro
+++ b/src/pages/projects/theaters/teatro-santiago.astro
@@ -123,8 +123,8 @@ const images = [
 ];
 ---
 
-<Base>
-    <Layout description="" title="">
+<Layout description="" title="Teatro Municipal de Santiago">
+    <Base>
         <ProjectPage
             images={images}
             id="santiago"
@@ -138,5 +138,5 @@ const images = [
             datosTecnicos={datosTecnicos}
             asesores={asesores}
         />
-    </Layout>
-</Base>
+    </Base>
+</Layout>
