--- a/src/pages/projects/theaters/teatro-solis.astro
+++ b/src/pages/projects/theaters/teatro-solis.astro
@@ -115,8 +115,8 @@ const images = [
 ];
 ---
 
-<Base>
-    <Layout description="" title="">
+<Layout description="" title="Teatro Municipal Solís">
+    <Base>
         <ProjectPage
             images={images}
             id="solis"
@@ -130,5 +130,5 @@ const images = [
             datosTecnicos={datosTecnicos}
             asesores={asesores}
         />
-    </Layout>
-</Base>
+    </Base>
+</Layout>
