Agregar nuevos proyectos de teatro y mejorar el diseño del encabezado y la galería

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -103,7 +103,7 @@ import Nav from './Nav.astro';
         x-show="open"
         x-collapse
         x-collapse.duration.500ms>
-        <div class="relative grid grid-cols-1 gap-x-8 pb-24 pt-2 lg:grid-cols-2 lg:pt-4">
+        <div class="relative grid grid-cols-1 gap-x-8 py-32 pt-2 lg:grid-cols-2 lg:pt-4">
             <div
                 class="hidden w-auto items-center justify-center rounded-xl bg-primary-500/10 object-cover dark:bg-primary-400/10 lg:flex">
                 <img
