--- a/src/pages/projects/all.astro
+++ b/src/pages/projects/all.astro
@@ -14,6 +14,9 @@ import eastman from '../../img/projects/eastman.webp';
 import santiago from '../../img/projects/santiago.webp';
 import pane from '../../img/projects/pane.webp';
 import condes from '../../img/projects/condes.webp';
+import artes from '../../img/projects/artes.webp';
+import lago from '../../img/projects/lago.webp';
+import serena from '../../img/projects/serena.webp';
 
 const OPTIONS = { loop: true };
 const SLIDE_COUNT = 5;
@@ -133,6 +136,42 @@ const projects = [
         img: condes,
         anchor: 'Ver más sobre este proyecto',
         href: '/projects/theaters/teatro-condes',
+    },
+    {
+        id: 'artes',
+        city: 'Bogotá, Colombia',
+        year: '2006-2007',
+        room: 'Sala de Teatro',
+        project: 'Teatro Bellas Artes',
+        description:
+            'El Teatro Bellas Artes de Bogotá, Colombia realizado por la caja de compensación familiar Cafam e inaugurado en el año 2008, cuenta con capacidad para 1200 localidades al aire libre y 1000 dentro del recinto.',
+        img: artes,
+        anchor: 'Ver más sobre este proyecto',
+        href: '/projects/theaters/teatro-bellas-artes',
+    },
+    {
+        id: 'lago',
+        city: 'Frutillar, Chile',
+        year: '2009-2010',
+        room: 'Sala Nestlé',
+        project: 'Teatro del Lago',
+        description:
+            'El Teatro del Lago de Frutillar, Chile, inaugurado en el año 2010 y diseñado inicialmente por los arquitectos Gerardo Köster',
+        img: lago,
+        anchor: 'Ver más sobre este proyecto',
+        href: '/projects/theaters/teatro-del-lago',
+    },
+    {
+        id: 'serena',
+        city: 'La serena, Chile',
+        year: '2011-2012',
+        room: 'Sala Principal y Secundaria',
+        project: 'Teatro Municipal la Serena',
+        description:
+            'Con una sala principal para 1500 localidades y una sala secundaria para 800 personas, el Teatro Regional de la Serena',
+        img: serena,
+        anchor: 'Ver más sobre este proyecto',
+        href: '/projects/theaters/teatro-la-serena',
     },
 ];
 ---
