Ajustar el diseño del encabezado y mejorar la galería: añadir clase de ancho completo al aside y optimizar la transición del componente de música.

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -108,7 +108,7 @@ const {
                     <DataList client:visible datosTecnicos={datosTecnicos} asesores={asesores} />
                 </div>
             </div>
-            <aside class="">
+            <aside class="w-full">
                 <SimpleGallery client:visible galleryID="myGallery" images={images} />
             </aside>
         </div>
