Agregar componente Footer y mejorar el diseño de varias páginas: actualizar encabezados, enlaces y contenido en el footer, así como ajustar el diseño en la página de proyectos.

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -3,6 +3,7 @@ import GoBack from './GoBack.astro';
 import { SimpleGallery } from './SimpleGallery/SimpleGallery';
 import DataList from './DataList.jsx';
 import Header from './layout/Header.astro';
+import Footer from './layout/Footer.astro';
 
 interface infoProjects {
     id?: string;
@@ -113,4 +114,5 @@ const {
             </aside>
         </div>
     </div>
+    <Footer />
 </section>
