--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -3,7 +3,7 @@ import About from '../../components/home/About.astro';
 import Cta from '../../components/home/Cta.astro';
 import Expertise from '../../components/home/Expertise.astro';
 import Hero from '../../components/home/Hero.astro';
-import Services from '../../components/home/Services.astro';
+import Notes from '../../components/home/Notes.astro';
 import Testimonials from '../../components/home/Testimonials.astro';
 import Footer from '../../components/layout/Footer.astro';
 import Header from '../../components/layout/Header.astro';
@@ -22,7 +22,7 @@ const texts = [
 <Layout description={texts[0].page} title={texts[0].title}>
     <Header />
     <Hero title={texts[0].title} description={texts[0].description} />
-    <Services />
+    <Notes />
     <!-- <Expertise /> -->
     <About />
     <Testimonials />
