--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -17,7 +17,7 @@ const { id, city, year, room, project, description, anchor, href, img } = Astro.
 ---
 
 <section class="py-16 sm:py-20">
-    <div class="mx-auto max-w-2xl px-4 sm:px-16 lg:px-0 lg:max-w-4xl">
+    <div class="mx-auto max-w-2xl px-4 sm:px-16 lg:max-w-4xl lg:px-0">
         <div
             class="grid overflow-hidden rounded-xl bg-primary-200/50 shadow-md dark:bg-primary-400 lg:max-h-[550px] lg:grid-cols-2">
             <img
