--- a/src/components/about/Team.astro
+++ b/src/components/about/Team.astro
@@ -1,19 +1,14 @@
 ---
 const team = [
   {
-    name: 'Floyd Lowe',
+    name: 'Alfio Sambataro',
     image: '/assets/team-1.webp',
-    job: 'Senior Designer',
+    job: 'Architecto',
   },
   {
-    name: 'Emma Dorsey',
+    name: 'Agostina Sambataro',
     image: '/assets/team-2.webp',
-    job: 'Principal Designer',
-  },
-  {
-    name: 'Emily Mitchell',
-    image: '/assets/team-3.webp',
-    job: 'Senior Developer',
+    job: 'Architecta',
   },
 ];
 ---
@@ -21,7 +16,7 @@ const team = [
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="sm:space-8 space-y-12">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Meet our team</h2>
+      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Conoce nuestros equipo</h2>
       <ul role="list" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
         {
           team.map((item) => (
