--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,19 +1,17 @@
 ---
-import Heading from '../components/about/Heading.astro';
 import Mission from '../components/about/Mission.astro';
 import Team from '../components/about/Team.astro';
 import Values from '../components/about/Values.astro';
 import Base from '../layouts/Base.astro';
 import Layout from '../layouts/Layout.astro';
+import Header from '../components/layout/Header.astro';
+import Footer from '../components/layout/Footer.astro';
 ---
 
-<Base>
-    <Layout
-        description="Find more our history, values, mission and more. We are a group of people who share the same values."
-        title="About · Stone">
-        <Heading />
-        <Mission />
-        <Values />
-        <Team />
-    </Layout>
-</Base>
+<Layout description="" title="Nosotros">
+    <Header id="top" />
+    <Mission />
+    <Values />
+    <Team />
+    <Footer/>
+</Layout>
