--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Cta from '../components/home/Cta.astro';
 import Expertise from '../components/home/Expertise.astro';
 import Hero from '../components/home/Hero.astro';
 import Projects from '../components/home/Projects.astro';
-import Services from '../components/home/Services.astro';
+import Notes from '../components/home/Notes.astro';
 import Testimonials from '../components/home/Testimonials.astro';
 import Footer from '../components/layout/Footer.astro';
 import Header from '../components/layout/Header.astro';
@@ -26,10 +26,10 @@ const texts = [
     <Hero title={texts[0].title} description={texts[0].description} />
     <Heading title="Proyectos" subtitle="Selección de los más renombrados" />
     <Projects />
-    <!-- <Services />
-  <Expertise />
-  <About />
-  <Testimonials />
-  <Cta /> -->
+    <Heading title="Notas" subtitle="Notas de los medios" />
+    <Notes />
+    <!-- <Expertise /> -->
+    <!-- <Testimonials /> -->
+    <Cta />
     <Footer />
 </Layout>
