--- a/src/pages/projects/all.astro
+++ b/src/pages/projects/all.astro
@@ -261,6 +261,34 @@ const projects = [
                     projects={projects}
                 />
             </article>
+
+            <article class="mx-auto py-12 sm:py-24">
+                <h6
+                    class="mx-auto w-full py-4 text-center text-2xl font-light tracking-tight sm:py-12 lg:text-[3vw]">
+                    {titles[0].title}
+                </h6>
+
+                <EmblaCarousel
+                    client:visible
+                    slides={SLIDES}
+                    options={OPTIONS}
+                    projects={projects}
+                />
+            </article>
+
+            <article class="mx-auto py-12 sm:py-24">
+                <h6
+                    class="mx-auto w-full py-4 text-center text-2xl font-light tracking-tight sm:py-12 lg:text-[3vw]">
+                    {titles[0].title}
+                </h6>
+
+                <EmblaCarousel
+                    client:visible
+                    slides={SLIDES}
+                    options={OPTIONS}
+                    projects={projects}
+                />
+            </article>
         </section>
         <Footer />
     </Base>
